# hancom-viewer-installer

./: meson.build
data/: kr.hancom.viewer-installer.appdata.xml.in  kr.hancom.viewer-installer.autostart.desktop.in  kr.hancom.viewer-installer.desktop.in  kr.hancom.viewer-installer.gschema.xml  kr.hancom.viewer-installer.policy  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright
po/: en_GB.po  ko.po
src/: define.h  main.c  meson.build  utils.c  viewer-installer-application.c  viewer-installer-application.h  viewer-installer-infos.json  viewer-installer-window-view-model.c  viewer-installer-window-view-model.h  viewer-installer-window.c  viewer-installer-window.h
src/resources/: style.css  viewer-installer-window.ui  viewer-installer.gresource.xml
